--- a/index.html
+++ b/index.html
@@ -1,185 +1,149 @@
 <!DOCTYPE html>
-<html lang="ar" dir="rtl">
+<html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dynamic Portfolio Dashboard</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css">
-    <style>
-        :root {
-            --primary-color: #2ecc71;
-            --bg-color: #fff;
-            --text-color: #333;
-            --card-bg: #f9f9f9;
-        }
-
-        .dark-mode {
-            --bg-color: #1a1a1a;
-            --text-color: #fff;
-            --card-bg: #2d2d2d;
-        }
-
-        /* Loader Spinner */
-        .loader {
-            animation: spin 1s linear infinite;
-            border: 4px solid #f3f3f3;
-            border-top: 4px solid var(--primary-color);
-            border-radius: 50%;
-            width: 40px;
-            height: 40px;
-            margin: 20px auto;
-        }
-
-        @keyframes spin {
-            0% { transform: rotate(0deg); }
-            100% { transform: rotate(360deg); }
-        }
-
-        /* تحسينات الجريد والبطاقات */
-        .projects-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
-            gap: 25px;
-            padding: 2rem;
-        }
-
-        .project-card {
-            background: var(--card-bg);
-            border-radius: 15px;
-            overflow: hidden;
-            transform: translateY(0);
-            transition: 0.3s ease;
-            box-shadow: 0 5px 15px rgba(0,0,0,0.1);
-        }
-
-        .project-card:hover {
-            transform: translateY(-5px);
-            box-shadow: 0 10px 20px rgba(0,0,0,0.2);
-        }
-
-        /* تحسين المودال */
-        .project-modal {
-            position: fixed;
-            top: 0;
-            left: 0;
-            right: 0;
-            bottom: 0;
-            background: rgba(0,0,0,0.8);
-            display: none;
-            animation: modalFade 0.3s ease;
-        }
-
-        @keyframes modalFade {
-            from { opacity: 0; }
-            to { opacity: 1; }
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Dynamic Portfolio Dashboard</title>
+  <style>
+    /* Reset + base */
+    *{margin:0;padding:0;box-sizing:border-box}
+    body{font-family:sans-serif;transition:background .3s,color .3s}
+    .dark{background:#121212;color:#eee}
+    .light{background:#fff;color:#111}
+    /* layout */
+    header, .controls, .projects{padding:1rem}
+    .controls{display:flex;gap:1rem;flex-wrap:wrap}
+    .projects{display:grid;grid-template-columns:repeat(auto-fill,minmax(250px,1fr));gap:1rem}
+    .project{background:#f5f5f5;border-radius:8px;overflow:hidden;cursor:pointer;transition:transform .2s}
+    .project:hover{transform:scale(1.03)}
+    .project img{width:100%;height:150px;object-fit:cover}
+    .project .info{padding:.5rem}
+    /* modal */
+    .modal{position:fixed;top:0;left:0;width:100%;height:100%;display:none;align-items:center;justify-content:center;background:rgba(0,0,0,.6)}
+    .modal.active{display:flex}
+    .modal-content{background:#fff;color:#111;padding:1rem;border-radius:8px;max-width:500px;width:90%;position:relative}
+    .modal-content .close{position:absolute;top:8px;right:12px;cursor:pointer}
+    /* form */
+    #formContainer{margin:1rem 0}
+    /* buttons */
+    button{padding:.5rem 1rem;border:none;border-radius:4px;cursor:pointer;transition:opacity .2s}
+    button:hover{opacity:.8}
+  </style>
 </head>
-<body>
-    <!-- شريط البحث -->
-    <div class="search-bar">
-        <input type="text" id="searchInput" placeholder="ابحث عن مشروع...">
-        <i class="fas fa-search"></i>
+<body class="light">
+  <header>
+    <h1 data-i18n="title">لوحة أعمال ديناميكية</h1>
+  </header>
+  <div class="controls">
+    <!-- فلترة -->
+    <div id="filters">
+      <button data-type="all" data-i18n="all">الكل</button>
+      <button data-type="WordPress">WordPress</button>
+      <button data-type="HTML">HTML</button>
+      <button data-type="JS">JS</button>
+      <button data-type="UI">UI</button>
     </div>
-
-    <!-- إحصائيات المشاريع -->
-    <canvas id="projectsChart"></canvas>
-
-    <!-- بقية العناصر... -->
-
-<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-<script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
-<script>
-// تحسين نظام التخزين مع الصور
-function convertImageToBase64(file) {
-    return new Promise((resolve) => {
-        const reader = new FileReader();
-        reader.onload = () => resolve(reader.result);
-        reader.readAsDataURL(file);
+    <!-- نجم -->
+    <select id="starFilter">
+      <option value="0" data-i18n="allStars">كل التقييمات</option>
+      <option value="5">5 ⭐</option>
+      <option value="4">4 ⭐ وما فوق</option>
+      <option value="3">3 ⭐ وما فوق</option>
+    </select>
+    <!-- إضافة مشروع -->
+    <button id="toggleForm" data-i18n="addProject">أضف مشروع</button>
+    <!-- ثيم + لغة -->
+    <button id="themeBtn" data-i18n="toggleTheme">Dark/Light</button>
+    <button id="langBtn">ع/En</button>
+  </div>
+  <div id="formContainer" style="display:none">
+    <form id="projectForm">
+      <input type="text" id="title" placeholder="عنوان المشروع" required>
+      <input type="url" id="img" placeholder="رابط صورة" required>
+      <select id="type">
+        <option value="WordPress">WordPress</option>
+        <option value="HTML">HTML</option>
+        <option value="JS">JS</option>
+        <option value="UI">UI</option>
+      </select>
+      <input type="number" id="stars" placeholder="تقييم (1-5)" min="1" max="5" required>
+      <textarea id="desc" placeholder="وصف المشروع"></textarea>
+      <button type="submit" data-i18n="submit">حفظ</button>
+    </form>
+  </div>
+  <div class="projects" id="projects"></div>
+  <!-- Modal -->
+  <div class="modal" id="modal">
+    <div class="modal-content">
+      <span class="close" id="closeModal">×</span>
+      <h2 id="mTitle"></h2>
+      <img id="mImg" style="width:100%;height:auto">
+      <p id="mDesc"></p>
+      <p id="mStars"></p>
+    </div>
+  </div>
+  <script>
+    // ترجمة
+    const texts={
+      en:{title:'Dynamic Portfolio Dashboard',all:'All',allStars:'All Stars',addProject:'Add Project',toggleTheme:'Dark/Light',submit:'Save'},
+      ar:{title:'لوحة أعمال ديناميكية',all:'الكل',allStars:'كل التقييمات',addProject:'أضف مشروع',toggleTheme:'Dark/Light',submit:'حفظ'}
+    };
+    let lang='ar';
+    document.getElementById('langBtn').onclick=()=>{
+      lang=lang==='ar'?'en':'ar';
+      document.querySelectorAll('[data-i18n]').forEach(el=>el.textContent=texts[lang][el.getAttribute('data-i18n')]);
+    };
+    // بيانات
+    let data=JSON.parse(localStorage.getItem('projects')||'[]');
+    const save=()=>localStorage.setItem('projects',JSON.stringify(data));
+    // عرض
+    const render=()=>{
+      const typeF=document.querySelector('#filters .active')?.dataset.type||'all';
+      const starF=+document.getElementById('starFilter').value;
+      const cont=document.getElementById('projects');cont.innerHTML='';
+      data.filter(p=>
+        (typeF==='all'||p.type===typeF)&&p.stars>=starF
+      ).forEach((p,i)=>{
+        const el=document.createElement('div');el.className='project';
+        el.innerHTML=`<img src="${p.img}"><div class="info"><h3>${p.title}</h3><p>${p.type} - ${'★'.repeat(p.stars)}</p></div>`;
+        el.onclick=()=>{
+          document.getElementById('mTitle').textContent=p.title;
+          document.getElementById('mImg').src=p.img;
+          document.getElementById('mDesc').textContent=p.desc;
+          document.getElementById('mStars').textContent='★'.repeat(p.stars);
+          document.getElementById('modal').classList.add('active');
+        };
+        cont.append(el);
+      });
+    };
+    // dispatch
+    document.getElementById('filters').addEventListener('click',e=>{
+      if(e.target.tagName==='BUTTON'){
+        document.querySelectorAll('#filters button').forEach(b=>b.classList.remove('active'));
+        e.target.classList.add('active');render();
+      }
     });
-}
-
-// نظام التقييم التفاعلي
-function createRatingStars(rating, projectId) {
-    let stars = '';
-    for (let i = 1; i <= 5; i++) {
-        stars += `<i class="fa-star ${i <= rating ? 'fas' : 'far'}" 
-                  data-rating="${i}" 
-                  data-project="${projectId}"></i>`;
-    }
-    return stars;
-}
-
-// نظام البحث في الوقت الحقيقي
-document.getElementById('searchInput').addEventListener('input', (e) => {
-    const searchTerm = e.target.value.toLowerCase();
-    const filtered = projects.filter(p => 
-        p.title.toLowerCase().includes(searchTerm) || 
-        p.description?.toLowerCase().includes(searchTerm)
-    );
-    renderProjects('all', filtered);
-});
-
-// إحصائيات المشاريع مع Chart.js
-function renderProjectsChart() {
-    const ctx = document.getElementById('projectsChart').getContext('2d');
-    const types = ['wordpress', 'html', 'js'];
-    const counts = types.map(type => 
-        projects.filter(p => p.type === type).length
-    );
-
-    new Chart(ctx, {
-        type: 'doughnut',
-        data: {
-            labels: types,
-            datasets: [{
-                data: counts,
-                backgroundColor: ['#ff6384', '#36a2eb', '#cc65fe']
-            }]
-        }
-    });
-}
-
-// Service Worker للتخزين المؤقت
-if ('serviceWorker' in navigator) {
-    window.addEventListener('load', () => {
-        navigator.serviceWorker.register('/service-worker.js')
-            .then(registration => {
-                console.log('ServiceWorker registration successful');
-            });
-    });
-}
-
-// Swiper للعرض على الموبايل
-const initSwiper = () => {
-    new Swiper('.swiper-container', {
-        slidesPerView: 1,
-        spaceBetween: 20,
-        breakpoints: {
-            768: { slidesPerView: 2 },
-            1024: { slidesPerView: 3 }
-        }
-    });
-};
-
-// تحديث التقييمات
-document.body.addEventListener('click', (e) => {
-    if (e.target.classList.contains('fa-star')) {
-        const projectId = e.target.dataset.project;
-        const newRating = parseInt(e.target.dataset.rating);
-        
-        projects = projects.map(p => {
-            if (p.id == projectId) {
-                p.rating = newRating;
-            }
-            return p;
-        });
-        
-        localStorage.setItem('projects', JSON.stringify(projects));
-        renderProjects();
-    }
-});
-</script>
+    document.getElementById('starFilter').onchange=render;
+    document.getElementById('toggleForm').onclick=()=>{
+      const f=document.getElementById('formContainer');f.style.display=f.style.display==='none'?'block':'none';
+    };
+    document.getElementById('projectForm').onsubmit=e=>{
+      e.preventDefault();
+      data.unshift({
+        title:e.target.title.value,
+        img:e.target.img.value,
+        type:e.target.type.value,
+        stars:+e.target.stars.value,
+        desc:e.target.desc.value
+      });save();render();e.target.reset();
+    };
+    document.getElementById('closeModal').onclick=()=>document.getElementById('modal').classList.remove('active');
+    // ثيم
+    document.getElementById('themeBtn').onclick=()=>{
+      document.body.classList.toggle('dark');document.body.classList.toggle('light');
+    };
+    // init
+    document.querySelector('#filters button[data-type="all"]').classList.add('active');render();
+  </script>
 </body>
 </html>
