--- a/index.html
+++ b/index.html
@@ -1,149 +1,83 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ar">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Dynamic Portfolio Dashboard</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <title>محفظة أعمال – سعيد</title>
   <style>
-    /* Reset + base */
     *{margin:0;padding:0;box-sizing:border-box}
-    body{font-family:sans-serif;transition:background .3s,color .3s}
-    .dark{background:#121212;color:#eee}
-    .light{background:#fff;color:#111}
-    /* layout */
-    header, .controls, .projects{padding:1rem}
-    .controls{display:flex;gap:1rem;flex-wrap:wrap}
-    .projects{display:grid;grid-template-columns:repeat(auto-fill,minmax(250px,1fr));gap:1rem}
-    .project{background:#f5f5f5;border-radius:8px;overflow:hidden;cursor:pointer;transition:transform .2s}
-    .project:hover{transform:scale(1.03)}
-    .project img{width:100%;height:150px;object-fit:cover}
-    .project .info{padding:.5rem}
-    /* modal */
-    .modal{position:fixed;top:0;left:0;width:100%;height:100%;display:none;align-items:center;justify-content:center;background:rgba(0,0,0,.6)}
-    .modal.active{display:flex}
-    .modal-content{background:#fff;color:#111;padding:1rem;border-radius:8px;max-width:500px;width:90%;position:relative}
-    .modal-content .close{position:absolute;top:8px;right:12px;cursor:pointer}
-    /* form */
-    #formContainer{margin:1rem 0}
-    /* buttons */
-    button{padding:.5rem 1rem;border:none;border-radius:4px;cursor:pointer;transition:opacity .2s}
-    button:hover{opacity:.8}
+    body{font-family:Arial,sans-serif;line-height:1.6;direction:rtl}
+    header{background:#333;color:#fff;padding:20px;text-align:center}
+    nav a{color:#fff;margin:0 10px;text-decoration:none}
+    section{padding:40px 20px}
+    h2{margin-bottom:10px;text-align:center}
+    .grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(250px,1fr));gap:20px}
+    .card{background:#f4f4f4;padding:20px;border-radius:8px;text-align:center}
+    .card img{max-width:100%;border-radius:4px}
+    form{max-width:400px;margin:auto;display:flex;flex-direction:column}
+    form input,form textarea{margin-bottom:15px;padding:10px;border:1px solid #ccc;border-radius:4px}
+    form button{padding:10px;border:none;border-radius:4px;cursor:pointer;background:#333;color:#fff}
+    footer{background:#222;color:#aaa;text-align:center;padding:10px;font-size:14px}
   </style>
 </head>
-<body class="light">
+<body>
+
   <header>
-    <h1 data-i18n="title">لوحة أعمال ديناميكية</h1>
+    <nav>
+      <a href="#portfolio">الرئيسية</a>
+      <a href="#about">عنّي</a>
+      <a href="#contact">تواصل</a>
+    </nav>
+    <h1>سعيد – مطور ومصمم ووردبريس</h1>
+    <p>ببني مواقع حديثة باستخدام WordPress وElementor</p>
   </header>
-  <div class="controls">
-    <!-- فلترة -->
-    <div id="filters">
-      <button data-type="all" data-i18n="all">الكل</button>
-      <button data-type="WordPress">WordPress</button>
-      <button data-type="HTML">HTML</button>
-      <button data-type="JS">JS</button>
-      <button data-type="UI">UI</button>
+
+  <section id="portfolio">
+    <h2>أعمالي</h2>
+    <div class="grid">
+      <div class="card">
+        <img src="images/project1.jpg" alt="مشروع 1">
+        <h3>مشروع 1</h3>
+        <p>وصف قصير عن المشروع.</p>
+      </div>
+      <div class="card">
+        <img src="images/project2.jpg" alt="مشروع 2">
+        <h3>مشروع 2</h3>
+        <p>وصف قصير عن المشروع.</p>
+      </div>
+      <!-- كرر البلوك ده لكل مشروع -->
     </div>
-    <!-- نجم -->
-    <select id="starFilter">
-      <option value="0" data-i18n="allStars">كل التقييمات</option>
-      <option value="5">5 ⭐</option>
-      <option value="4">4 ⭐ وما فوق</option>
-      <option value="3">3 ⭐ وما فوق</option>
-    </select>
-    <!-- إضافة مشروع -->
-    <button id="toggleForm" data-i18n="addProject">أضف مشروع</button>
-    <!-- ثيم + لغة -->
-    <button id="themeBtn" data-i18n="toggleTheme">Dark/Light</button>
-    <button id="langBtn">ع/En</button>
-  </div>
-  <div id="formContainer" style="display:none">
-    <form id="projectForm">
-      <input type="text" id="title" placeholder="عنوان المشروع" required>
-      <input type="url" id="img" placeholder="رابط صورة" required>
-      <select id="type">
-        <option value="WordPress">WordPress</option>
-        <option value="HTML">HTML</option>
-        <option value="JS">JS</option>
-        <option value="UI">UI</option>
-      </select>
-      <input type="number" id="stars" placeholder="تقييم (1-5)" min="1" max="5" required>
-      <textarea id="desc" placeholder="وصف المشروع"></textarea>
-      <button type="submit" data-i18n="submit">حفظ</button>
+  </section>
+
+  <section id="about">
+    <h2>عنّي</h2>
+    <p>أنا سعيد، طالب 3 ثانوي وبشتغل على WordPress وElementor.</p>
+    <p>عندي خبرة في HTML, CSS, JavaScript وبسعى أشتغل على Upwork وأزود دخلي.</p>
+  </section>
+
+  <section id="contact">
+    <h2>تواصل معايا</h2>
+    <form action="#" method="post">
+      <input type="text" name="name" placeholder="اسمك" required>
+      <input type="email" name="email" placeholder="ايميلك" required>
+      <textarea name="message" placeholder="رسالتك" required></textarea>
+      <button type="submit">إرسال</button>
     </form>
-  </div>
-  <div class="projects" id="projects"></div>
-  <!-- Modal -->
-  <div class="modal" id="modal">
-    <div class="modal-content">
-      <span class="close" id="closeModal">×</span>
-      <h2 id="mTitle"></h2>
-      <img id="mImg" style="width:100%;height:auto">
-      <p id="mDesc"></p>
-      <p id="mStars"></p>
-    </div>
-  </div>
+  </section>
+
+  <footer>
+    <p>© 2025 سعيد</p>
+  </footer>
+
   <script>
-    // ترجمة
-    const texts={
-      en:{title:'Dynamic Portfolio Dashboard',all:'All',allStars:'All Stars',addProject:'Add Project',toggleTheme:'Dark/Light',submit:'Save'},
-      ar:{title:'لوحة أعمال ديناميكية',all:'الكل',allStars:'كل التقييمات',addProject:'أضف مشروع',toggleTheme:'Dark/Light',submit:'حفظ'}
-    };
-    let lang='ar';
-    document.getElementById('langBtn').onclick=()=>{
-      lang=lang==='ar'?'en':'ar';
-      document.querySelectorAll('[data-i18n]').forEach(el=>el.textContent=texts[lang][el.getAttribute('data-i18n')]);
-    };
-    // بيانات
-    let data=JSON.parse(localStorage.getItem('projects')||'[]');
-    const save=()=>localStorage.setItem('projects',JSON.stringify(data));
-    // عرض
-    const render=()=>{
-      const typeF=document.querySelector('#filters .active')?.dataset.type||'all';
-      const starF=+document.getElementById('starFilter').value;
-      const cont=document.getElementById('projects');cont.innerHTML='';
-      data.filter(p=>
-        (typeF==='all'||p.type===typeF)&&p.stars>=starF
-      ).forEach((p,i)=>{
-        const el=document.createElement('div');el.className='project';
-        el.innerHTML=`<img src="${p.img}"><div class="info"><h3>${p.title}</h3><p>${p.type} - ${'★'.repeat(p.stars)}</p></div>`;
-        el.onclick=()=>{
-          document.getElementById('mTitle').textContent=p.title;
-          document.getElementById('mImg').src=p.img;
-          document.getElementById('mDesc').textContent=p.desc;
-          document.getElementById('mStars').textContent='★'.repeat(p.stars);
-          document.getElementById('modal').classList.add('active');
-        };
-        cont.append(el);
+    // smooth scroll
+    document.querySelectorAll('nav a').forEach(a=>{
+      a.addEventListener('click',e=>{
+        e.preventDefault();
+        document.querySelector(a.getAttribute('href')).scrollIntoView({behavior:'smooth'});
       });
-    };
-    // dispatch
-    document.getElementById('filters').addEventListener('click',e=>{
-      if(e.target.tagName==='BUTTON'){
-        document.querySelectorAll('#filters button').forEach(b=>b.classList.remove('active'));
-        e.target.classList.add('active');render();
-      }
     });
-    document.getElementById('starFilter').onchange=render;
-    document.getElementById('toggleForm').onclick=()=>{
-      const f=document.getElementById('formContainer');f.style.display=f.style.display==='none'?'block':'none';
-    };
-    document.getElementById('projectForm').onsubmit=e=>{
-      e.preventDefault();
-      data.unshift({
-        title:e.target.title.value,
-        img:e.target.img.value,
-        type:e.target.type.value,
-        stars:+e.target.stars.value,
-        desc:e.target.desc.value
-      });save();render();e.target.reset();
-    };
-    document.getElementById('closeModal').onclick=()=>document.getElementById('modal').classList.remove('active');
-    // ثيم
-    document.getElementById('themeBtn').onclick=()=>{
-      document.body.classList.toggle('dark');document.body.classList.toggle('light');
-    };
-    // init
-    document.querySelector('#filters button[data-type="all"]').classList.add('active');render();
   </script>
+
 </body>
 </html>
