--- a/index.html
+++ b/index.html
@@ -4,21 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <title>محفظة أعمال – سعيد</title>
-  <style>
-    *{margin:0;padding:0;box-sizing:border-box}
-    body{font-family:Arial,sans-serif;line-height:1.6;direction:rtl}
-    header{background:#333;color:#fff;padding:20px;text-align:center}
-    nav a{color:#fff;margin:0 10px;text-decoration:none}
-    section{padding:40px 20px}
-    h2{margin-bottom:10px;text-align:center}
-    .grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(250px,1fr));gap:20px}
-    .card{background:#f4f4f4;padding:20px;border-radius:8px;text-align:center}
-    .card img{max-width:100%;border-radius:4px}
-    form{max-width:400px;margin:auto;display:flex;flex-direction:column}
-    form input,form textarea{margin-bottom:15px;padding:10px;border:1px solid #ccc;border-radius:4px}
-    form button{padding:10px;border:none;border-radius:4px;cursor:pointer;background:#333;color:#fff}
-    footer{background:#222;color:#aaa;text-align:center;padding:10px;font-size:14px}
-  </style>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -32,29 +18,29 @@
     <p>ببني مواقع حديثة باستخدام WordPress وElementor</p>
   </header>
 
+  <!-- SECTION PORTFOLIO -->
   <section id="portfolio">
     <h2>أعمالي</h2>
-    <div class="grid">
-      <div class="card">
-        <img src="images/project1.jpg" alt="مشروع 1">
-        <h3>مشروع 1</h3>
-        <p>وصف قصير عن المشروع.</p>
-      </div>
-      <div class="card">
-        <img src="images/project2.jpg" alt="مشروع 2">
-        <h3>مشروع 2</h3>
-        <p>وصف قصير عن المشروع.</p>
-      </div>
-      <!-- كرر البلوك ده لكل مشروع -->
+    <div class="grid" id="grid"></div>
+
+    <!-- form أدمن بيظهر بس لو داخل على الرابط بـ ?admin=true -->
+    <div id="admin-form" class="admin-form" style="display:none">
+      <h3>أضف مشروع جديد</h3>
+      <input type="text" id="proj-title" placeholder="عنوان المشروع">
+      <input type="url" id="proj-url" placeholder="رابط الموقع">
+      <textarea id="proj-desc" placeholder="وصف قصير"></textarea>
+      <button id="add-btn">إضافة</button>
     </div>
   </section>
 
+  <!-- SECTION ABOUT -->
   <section id="about">
     <h2>عنّي</h2>
     <p>أنا سعيد، طالب 3 ثانوي وبشتغل على WordPress وElementor.</p>
     <p>عندي خبرة في HTML, CSS, JavaScript وبسعى أشتغل على Upwork وأزود دخلي.</p>
   </section>
 
+  <!-- SECTION CONTACT -->
   <section id="contact">
     <h2>تواصل معايا</h2>
     <form action="#" method="post">
@@ -69,15 +55,6 @@
     <p>© 2025 سعيد</p>
   </footer>
 
-  <script>
-    // smooth scroll
-    document.querySelectorAll('nav a').forEach(a=>{
-      a.addEventListener('click',e=>{
-        e.preventDefault();
-        document.querySelector(a.getAttribute('href')).scrollIntoView({behavior:'smooth'});
-      });
-    });
-  </script>
-
+  <script src="script.js"></script>
 </body>
 </html>
