--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   <section id="projects" class="projects">
     <h2>مشاريعي</h2>
     <div id="grid" class="grid"></div>
-
+<!-- trigger rebuild -->
     <!-- admin form -->
     <div id="admin" class="admin" style="display:none">
       <h3>لوحة التحكم</h3>
