--- a/index.html
+++ b/index.html
@@ -1,66 +1,132 @@
 <!DOCTYPE html>
-<html lang="ar">
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <title>محفظة سعيد الاحترافية</title>
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Professional Portfolio - Saeed</title>
+    <meta name="description" content="Saeed's professional portfolio, showcasing web development projects and skills in HTML, CSS, JavaScript, WordPress, and Elementor. Contact for collaboration.">
+    <meta name="keywords" content="portfolio, Saeed, web development, HTML, CSS, JavaScript, WordPress, Elementor, projects, skills, contact">
+    <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
+    <header>
+        <div class="container">
+            <a href="#" class="logo">Saeed</a>
+            <nav>
+                <ul>
+                    <li><a href="#home" data-lang="home">Home</a></li>
+                    <li><a href="#about" data-lang="about">About Me</a></li>
+                    <li><a href="#skills" data-lang="skills">Skills</a></li>
+                    <li><a href="#projects" data-lang="projects">Projects</a></li>
+                    <li><a href="#contact" data-lang="contact">Contact</a></li>
+                    <li><a href="admin.html" class="admin-link" data-lang="adminPanel">Admin Panel</a></li>
+                    <li class="lang-switch"><a href="#" onclick="setLanguage('ar')">عربي</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
 
-  <nav class="navbar">
-    <a href="#hero">الرئيسية</a>
-    <a href="#about">عنّي</a>
-    <a href="#skills">مهاراتي</a>
-    <a href="#projects">مشاريعي</a>
-    <a href="#contact">تواصل</a>
-  </nav>
+    <main>
+        <section id="home" class="hero">
+            <div class="container">
+                <div class="hero-content">
+                    <h1 data-lang="heroTitle">Hi, I'm Saeed</h1>
+                    <p class="lead" data-lang="heroLead">A passionate 19-year-old web developer with a solid foundation in front-end technologies and a drive to learn and create innovative web solutions.</p>
+                    <div class="call-to-action">
+                        <a href="#projects" class="button primary" data-lang="heroButton1">View My Work</a>
+                        <a href="#contact" class="button secondary" data-lang="heroButton2">Contact Me</a>
+                    </div>
+                </div>
+                <div class="hero-image">
+                    <img src="images/profile.jpg" alt="Saeed's Profile Picture">
+                </div>
+            </div>
+        </section>
 
-  <section id="hero" class="hero">
-    <h1>سعيد مطور ويب</h1>
-    <p>ببني مواقع احترافية بالـWordPress وElementor</p>
-  </section>
+        <section id="about" class="about">
+            <div class="container">
+                <h2 data-lang="aboutTitle">About Me</h2>
+                <p data-lang="aboutParagraph1">I am Saeed, a 19-year-old with a deep enthusiasm for the world of programming and web development. I have built a strong foundation in front-end development through hands-on experience with HTML, CSS, and JavaScript. My passion extends to creating user-friendly and visually appealing websites that deliver excellent user experiences. I am currently expanding my skillset by learning WordPress and Elementor, eager to leverage these powerful tools to build dynamic and robust websites.</p>
+                <p data-lang="aboutParagraph2">My goal is to continuously improve my coding skills and contribute to meaningful projects. I am a quick learner, dedicated to staying up-to-date with the latest web development trends and technologies. I am excited about the opportunity to collaborate on innovative projects and bring creative ideas to life through code.</p>
+                <div class="personal-info">
+                    <div><strong data-lang="personalName">Name:</strong> Saeed</div>
+                    <div><strong data-lang="personalEmail">Email:</strong> <a href="mailto:your.email@example.com">your.email@example.com</a></div>
+                    <div><strong data-lang="personalPhone">Phone:</strong> [Your Phone Number]</div>
+                    <div><strong data-lang="personalLocation">Location:</strong> Shirbin, Dakahlia Governorate, Egypt</div>
+                    <div><strong data-lang="personalLinkedIn">LinkedIn:</strong> <a href="[Your LinkedIn Profile Link]" target="_blank">Saeed's LinkedIn</a></div>
+                    <div><strong data-lang="personalGitHub">GitHub:</strong> <a href="[Your GitHub Profile Link]" target="_blank">Saeed's GitHub</a></div>
+                </div>
+            </div>
+        </section>
 
-  <section id="about" class="about">
-    <h2>عنّي</h2>
-    <p>طالب ثانوي ومطور مواقع، خبرة في HTML/CSS/JS وبشتغل على Upwork.</p>
-  </section>
+        <section id="skills" class="skills">
+            <div class="container">
+                <h2 data-lang="skillsTitle">Skills</h2>
+                <div class="skills-grid">
+                    <div class="skill-item">
+                        <h3 data-lang="skillHTML">HTML</h3>
+                        <div class="progress-bar">
+                            <div class="progress" style="width: 95%;" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100">95%</div>
+                        </div>
+                        <p data-lang="skillHTMLDesc">Proficient in creating semantic and well-structured HTML5 markup for web pages.</p>
+                    </div>
+                    <div class="skill-item">
+                        <h3 data-lang="skillCSS">CSS</h3>
+                        <div class="progress-bar">
+                            <div class="progress" style="width: 90%;" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">90%</div>
+                        </div>
+                        <p data-lang="skillCSSDesc">Experienced in styling web pages with CSS3, including responsive design and modern layouts.</p>
+                    </div>
+                    <div class="skill-item">
+                        <h3 data-lang="skillJS">JavaScript</h3>
+                        <div class="progress-bar">
+                            <div class="progress" style="width: 75%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">75%</div>
+                        </div>
+                        <p data-lang="skillJSDesc">Solid understanding of core JavaScript concepts and experience in creating interactive elements.</p>
+                    </div>
+                    <div class="skill-item">
+                        <h3 data-lang="skillWordPress">WordPress</h3>
+                        <div class="progress-bar">
+                            <div class="progress" style="width: 60%;" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">60%</div>
+                        </div>
+                        <p data-lang="skillWordPressDesc">Currently learning WordPress, including theme customization and plugin integration.</p>
+                    </div>
+                    <div class="skill-item">
+                        <h3 data-lang="skillElementor">Elementor</h3>
+                        <div class="progress-bar">
+                            <div class="progress" style="width: 50%;" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">50%</div>
+                        </div>
+                        <p data-lang="skillElementorDesc">In the process of mastering Elementor for building visually appealing and functional WordPress websites.</p>
+                    </div>
+                    </div>
+            </div>
+        </section>
 
-  <section id="skills" class="skills">
-    <h2>مهاراتي</h2>
-    <ul>
-      <li>WordPress & Elementor</li>
-      <li>HTML، CSS، JavaScript</li>
-      <li>Responsive Design</li>
-      <li>SEO Basics</li>
-    </ul>
-  </section>
+        <section id="projects" class="projects">
+            <div class="container">
+                <h2 data-lang="projectsTitle">Projects</h2>
+                <div class="projects-grid">
+                    <div class="project-item">
+                        <img src="images/project1.jpg" alt="Project 1 Name">
+                        <h3 data-lang="project1Title">Project 1 Name</h3>
+                        <p data-lang="project1Desc">A brief and engaging description of Project 1, highlighting its key features and technologies used.</p>
+                        <a href="projects/project1.html" class="button details" data-lang="projectDetails">Project Details</a>
+                    </div>
+                    <div class="project-item">
+                        <img src="images/project2.jpg" alt="Project 2 Name">
+                        <h3 data-lang="project2Title">Project 2 Name</h3>
+                        <p data-lang="project2Desc">A concise and compelling description of Project 2, mentioning the technologies and outcomes.</p>
+                        <a href="projects/project2.html" class="button details" data-lang="projectDetails">Project Details</a>
+                    </div>
+                    </div>
+                <div class="view-more">
+                    <a href="#" class="button" data-lang="viewMore">View More Projects</a>
+                </div>
+            </div>
+        </section>
 
-  <section id="projects" class="projects">
-    <h2>مشاريعي</h2>
-    <div id="grid" class="grid"></div>
-<!-- trigger rebuild -->
-    <!-- admin form -->
-    <div id="admin" class="admin" style="display:none">
-      <h3>لوحة التحكم</h3>
-      <input id="pt" placeholder="عنوان المشروع">
-      <input id="pu" placeholder="رابط الموقع">
-      <textarea id="pd" placeholder="وصف قصير"></textarea>
-      <button id="add">إضافة</button>
-    </div>
-  </section>
-
-  <section id="contact" class="contact">
-    <h2>تواصل معي</h2>
-    <form>
-      <input placeholder="اسمك" required>
-      <input type="email" placeholder="إيميلك" required>
-      <textarea placeholder="رسالتك" required></textarea>
-      <button>إرسال</button>
-    </form>
-  </section>
-
-  <footer>© 2025 سعيد</footer>
-  <script src="script.js"></script>
-</body>
-</html>
+        <section id="contact" class="contact">
+            <div class="container">
+                <h2 data-lang="contactTitle">Contact Me</h2>
+                <p class="lead" data-lang="contactLead">I
